# mariadb-columnstore-engine

./: .drone.jsonnet  CMakeLists.txt
cmake/: FindTBB.cmake
datatypes/: mcs_datatype.cpp  mcs_datatype.h  mcs_decimal.cpp  mcs_decimal.h  mcs_float128.h  numericliteral.h
dbcon/ddlpackage/: debugstatement.cpp
dbcon/ddlpackageproc/: altertableprocessor.cpp  altertableprocessor.h  createindexprocessor.cpp  createindexprocessor.h  createtableprocessor.cpp  createtableprocessor.h  ddlpackageprocessor.cpp  ddlpackageprocessor.h  dropindexprocessor.cpp  dropindexprocessor.h  droppartitionprocessor.cpp  droppartitionprocessor.h  droptableprocessor.cpp  droptableprocessor.h  markpartitionprocessor.cpp  markpartitionprocessor.h  restorepartitionprocessor.cpp  restorepartitionprocessor.h
dbcon/dmlpackage/: row.cpp
dbcon/dmlpackageproc/: commandpackageprocessor.cpp  commandpackageprocessor.h  deletepackageprocessor.cpp  deletepackageprocessor.h  dmlpackageprocessor.cpp  dmlpackageprocessor.h  insertpackageprocessor.cpp  insertpackageprocessor.h  updatepackageprocessor.cpp  (+1 more)
ddlproc/: ddlprocessor.cpp  ddlprocessor.h
dmlproc/: dmlproc.cpp  dmlprocessor.cpp  dmlprocessor.h
docs/: StorageManagerMetaVersioning.md
exemgr/: main.cpp
storage-manager/: CMakeLists.txt  storagemanager.cnf.in
tests/: CMakeLists.txt  compression-tests.cpp  rebuild-em-tests.cpp  shared_components_tests.cpp
tools/: CMakeLists.txt
tools/rebuildEM/: BRM_saves_em_system_tables_blob.cpp  BRM_saves_em_system_tables_blob.h  CMakeLists.txt  main.cpp  rebuildEM.cpp  rebuildEM.h
(+169 files in other folders)
